# fluxera

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
benchmarks/: compare_stub_runtime.py  production_compare.py  redis_idle_consumer_pressure.py  redis_transport_compare.py
docs/: BENCHMARK.md  CURRENT_WORKER_STATE.md  DEDUP_IDEMPOTENCY.md  DLQ.md  FAQ.md  GETTING_STARTED.md  REDIS_LUA_CONTRACT.md  REVISION_MANAGEMENT.md  SYSTEM_DESIGN.md
fluxera/: __init__.py  actor.py  admin.py  admin_asgi.py  admin_server.py  broker.py  callbacks.py  cli.py  current_state.py  dead_letters.py  encoder.py  errors.py  message.py  rate_limits.py
fluxera/brokers/: __init__.py  redis.py  redis_scripts.py  stub.py
fluxera/brokers/redis_lua/: enqueue_or_deduplicate.lua  idem_begin.lua  idem_commit.lua  idem_heartbeat.lua  idem_release.lua  promote_due.lua  remove_dedupe_key_if_owner.lua
fluxera/runtime/: __init__.py  worker.py
tests/: test_actor.py  test_admin_asgi.py  test_cli.py  test_encoder.py  test_rate_limits.py  test_redis_broker.py  test_stub_broker.py
